[package]
name = "bika-town"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legion = "*"
tiled = "*"
ron = "*"
lazy_static = "*"
serde = { version = "*", features = ["derive"] }
[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf","image"]
